# internals/model/users/users.go
@@ -7,3 +7,16 @@ type Request struct {
 	PhoneNumber string
 	Gender      string
 }
+
+type FitterReadUsers struct {
+	FullName string
+	Id       int32
+}
+
+type ReadResponseUsers struct {
+	Id          int32
+	FullName    string
+	Address     string
+	PhoneNumber string
+	Gender      string
+}
